# s_indexes

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: test_sequence
include/: algorithms.hpp  builder.hpp  builder1.hpp  builder2.hpp  builder3.hpp  builders.hpp  building_util.hpp  configuration.hpp  constants.hpp  contains.hpp  decode.hpp  decode3.hpp  enumerator.hpp  intersect_vector16.hpp  intersection.hpp  intersection2.hpp  intersection3.hpp  intersection_many.hpp  next_geq.hpp  next_geq_enumerator.hpp  s_index.hpp  s_sequence.hpp  select.hpp  table2.hpp  tables.hpp  uncompress.hpp  uncompress3.hpp  uncompress_chunk_and_intersect.hpp  uncompress_chunk_and_merge.hpp  union.hpp  union_many.hpp  util.hpp
script/: build.py  queries.py  query_gen.py
src/: CMakeLists.txt  build.cpp  cardinality.cpp  contains.cpp  decode.cpp  example.cpp  intersect.cpp  next_geq.cpp  select.cpp  uncompress.cpp  uncompress_no_cardinality.cpp  union.cpp
statistics/: README.md
test/: CMakeLists.txt  check.cpp  check_decode.cpp  check_uncompress.cpp  decode.cpp  test_common.hpp  test_contains.cpp  test_decode.cpp  test_enumerator.cpp  test_intersect.cpp  test_intersect_many.cpp  test_next_geq.cpp  test_next_geq_enumerator.cpp  test_select.cpp  test_uncompress.cpp  test_union.cpp  test_union_many.cpp  uncompress.cpp
tools/: CMakeLists.txt  gen_clustered_data.cpp  gen_pairwise_queries.cpp  gen_random_contains_queries.cpp  gen_random_data.cpp  gen_random_next_geq_queries.cpp  gen_random_select_queries.cpp  gen_uniform_data.cpp
