add_executable(test_decode test_decode.cpp)
add_executable(test_uncompress test_uncompress.cpp)
add_executable(test_intersect test_intersect.cpp)
add_executable(test_union test_union.cpp)
add_executable(test_select test_select.cpp)
add_executable(test_contains test_contains.cpp)
add_executable(test_next_geq test_next_geq.cpp)